--- a/src/biome.template.json
+++ b/src/biome.template.json
@@ -15,7 +15,7 @@
     "indentWidth": 2
   },
   "javascript": {
-    "jsxRuntime": "preserve",
+    "jsxRuntime": "reactClassic",
     "formatter": {
       "quoteStyle": "single"
     }
