--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "create-biome",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "bin": {
     "create-biome": "./dist/index.mjs"
   },
   "type": "module",
   "scripts": {
-    "build": "tsdown src/index.ts --outDir dist --copy src/biome.template.json --copy src/editorconfig.template",
-    "dev": "tsdown --watch src/index.ts --outDir dist --copy src/biome.template.json --copy src/editorconfig.template",
+    "build": "tsdown src/index.ts --outDir dist --copy src/template",
+    "dev": "tsdown --watch src/index.ts --outDir dist --copy src/template",
     "lint": "biome check .",
-    "lint:fix": "biome format --write . && biome check --write ."
+    "lint:fix": "biome format --write . && biome check --write .",
+    "lint:ci": "biome check ."
   },
   "files": [
     "dist/",
-    "src/biome.template.json",
-    "src/editorconfig.template"
+    "src/template/"
   ],
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
