--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-biome",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "bin": {
     "create-biome": "./dist/index.mjs"
   },
@@ -12,13 +12,15 @@
     "lint:fix": "biome format --write . && biome check --write .",
     "lint:ci": "biome check ."
   },
+  "engines": {
+    "node": ">=18"
+  },
   "files": [
     "dist/",
     "src/template/"
   ],
   "devDependencies": {
-    "@biomejs/biome": "^2.3.7",
-    "@biomejs/cli-darwin-arm64": "^2.3.7",
+    "@biomejs/biome": "^2.3.8",
     "@clack/prompts": "^0.11.0",
     "@types/node": "^24.10.1",
     "chalk": "^5.6.2",
