feat: add Volta configuration for Node.js version 18.20.8

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "url": "https://github.com/luckfunc/create-biome.git"
   },
   "funding": "https://github.com/sponsors/luckfunc",
-  "homepage": "https://github.com/luckfunc/create-biome#readme"
+  "homepage": "https://github.com/luckfunc/create-biome#readme",
+  "volta": {
+    "node": "18.20.8"
+  }
 }
