--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -1,40 +1,22 @@
-name: Node.js Package
+publish-npm:
+  needs: build
+  runs-on: ubuntu-latest
+  permissions:
+    contents: read
+    id-token: write # 必须开启
+  steps:
+    - uses: actions/checkout@v4
+    - uses: pnpm/action-setup@v4
+      with:
+        version: 9
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        registry-url: https://registry.npmjs.org/
+        always-auth: true
 
-on:
-  push:
-    branches:
-      - main
+    - run: pnpm install --frozen-lockfile
+    - run: pnpm run build
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm run lint
-      - run: pnpm run build
-
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org/
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm run build
-      - run: pnpm publish --access public --no-git-checks
+    - name: Publish to npm
+      run: npm publish --access public
