feat: restructure GitHub Actions workflow for Node.js package with OIDC publishing

--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -1,22 +1,50 @@
-publish-npm:
-  needs: build
-  runs-on: ubuntu-latest
-  permissions:
-    contents: read
-    id-token: write # 必须开启
-  steps:
-    - uses: actions/checkout@v4
-    - uses: pnpm/action-setup@v4
-      with:
-        version: 9
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        registry-url: https://registry.npmjs.org/
-        always-auth: true
+name: Node.js Package
 
-    - run: pnpm install --frozen-lockfile
-    - run: pnpm run build
+on:
+  push:
+    branches:
+      - main
 
-    - name: Publish to npm
-      run: npm publish --access public
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run lint
+      - run: pnpm run build
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write   # ✅ OIDC 必须
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://registry.npmjs.org/
+          always-auth: true   # ✅ OIDC 必须
+
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build
+
+      - name: Publish to npm via OIDC
+        run: npm publish --access public
