feat: add pnpm whoami step to GitHub Actions workflow

--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -45,6 +45,8 @@ jobs:
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run build
+      - run: pnpm whoami
+
 
       - name: Publish to npm via OIDC
         run: npm publish --access public
