feat: update GitHub Actions workflow to publish Node.js package on version tags

--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -2,46 +2,28 @@ name: Publish Package
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'main'
 
 permissions:
+  id-token: write  # Required for OIDC
   contents: read
-  id-token: write   # ✅ OIDC 必须
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣ 拉代码
       - uses: actions/checkout@v4
 
-      # 2️⃣ 初始化 pnpm（只负责装依赖 & 构建）
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      # 3️⃣ 初始化 Node + npm registry
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org/
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
 
-      # 4️⃣ 升级 npm（⚠️ 这是 OIDC 成功的生死线）
-      - name: Upgrade npm for OIDC
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
         run: npm install -g npm@latest
-
-      # 5️⃣ 安装依赖
-      - run: pnpm install --frozen-lockfile
-
-      # 6️⃣ 构建
-      - run: pnpm run build
-
-      # 7️⃣ 身份校验（必须能输出你的 npm 用户名）
-      - name: Debug identity
-        run: npm whoami
-
-      # 8️⃣ 正式发布（⚠️ 必须用 npm，不能用 pnpm）
-      - name: Publish to npm via OIDC
-        run: npm publish --access public
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+      - run: npm publish
