--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -3,7 +3,7 @@ name: Publish Package
 on:
   push:
     branches:
-      - 'main'
+      - main
 
 permissions:
   id-token: write  # Required for OIDC
