--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -23,7 +23,7 @@ jobs:
       # Ensure npm 11.5.1 or later is installed
       - name: Update npm
         run: npm install -g npm@latest
-      - run: npm ci
+      - run: pnpm install --frozen-lockfile
       - run: npm run build --if-present
       - run: npm test
       - run: npm publish
