--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -1,28 +1,53 @@
-name: Publish Package
+name: Node.js Package
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  id-token: write  # Required for OIDC
-  contents: read
-
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 20
 
-      # Ensure npm 11.5.1 or later is installed
-      - name: Update npm
-        run: npm install -g npm@latest
-      - run: npm run build --if-present
-      - run: npm test
-      - run: npm publish
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run lint
+      - run: pnpm run build
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write   # ✅ OIDC 必须
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://registry.npmjs.org/
+          always-auth: true   # ✅ OIDC 必须
+
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build
+      - run: pnpm whoami
+
+
+      - name: Publish to npm via OIDC
+      - run: npm publish --provenance
+
