--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write   # ✅ OIDC 必须
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +45,6 @@ jobs:
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run build
-
 
       - name: Publish to npm via OIDC
         run: npm publish --provenance
