--- a/.github/workflows/node-package.yml
+++ b/.github/workflows/node-package.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
@@ -42,6 +42,9 @@ jobs:
           node-version: 24
           registry-url: https://registry.npmjs.org/
           always-auth: true
+
+      - run: node -v
+      - run: npm -v
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run build
